Fix layout jumping on front page layout loading

--- a/stylesheets/scss/main.scss
+++ b/stylesheets/scss/main.scss
@@ -1131,6 +1131,7 @@ $header-inner-height: 28px;
   .blog-list-page &,
   .front-page & {
 
+
     height: 100%;
     min-height: 0;
     font-size: 0;
@@ -1252,7 +1253,7 @@ $header-inner-height: 28px;
       overflow-y: hidden;
 
       .main-inner {
-        padding-bottom: 80px;
+        padding-bottom: 95px;
         @include box-sizing(border-box);
         height: 100%;
       }
@@ -1331,6 +1332,14 @@ $header-inner-height: 28px;
       h3 {
         margin-bottom: 0;
       }
+    }
+  }
+
+  .blog-list-page.editmode,
+  .front-page.editmode {
+    .main-inner {
+      height: calc(100% + 40px);
+      padding-bottom: 135px;
     }
   }
 
